--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
-	<name>Explore With Me</name>
-
 	<groupId>ru.practicum</groupId>
 	<artifactId>explore-with-me</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
+	<version>0.0.1-SNAPSHOT</version>
 
 	<properties>
 		<java.version>11</java.version>
@@ -23,8 +21,8 @@
 	</properties>
 
 	<modules>
-		<module>main-service</module>
-		<module>statistics</module>
+		<module>ewm-service</module>
+		<module>stats-server</module>
 	</modules>
 
 	<dependencies>
