--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.1'
 services:
   stats-server:
-    build: stats-server
+    build: stats-server/statistics
     container_name: stats-server
     ports:
       - "9090:9090"
@@ -21,6 +21,7 @@ services:
       - POSTGRES_PASSWORD=root
 
   ewm-service:
+    image: postgres:14-alpine
     build: ewm-service
     container_name: ewm-service
     ports:
