--- a/stats-server/statistics/pom.xml
+++ b/stats-server/statistics/pom.xml
@@ -12,6 +12,8 @@
     <artifactId>statistics</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
+    <name>statistics</name>
+
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
