--- a/stats-server/pom.xml
+++ b/stats-server/pom.xml
@@ -9,6 +9,8 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
+    <name>Statistics</name>
+
     <artifactId>stats-server</artifactId>
     <packaging>pom</packaging>
 
