--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,10 @@ services:
     ports:
       - "9090:9090"
     depends_on:
-          - stats-db
+      - stats-db
     environment:
-          - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats-db
+      #- SERVER_PORT=9090
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats-db
 
   stats-db:
     image: postgres:14-alpine
@@ -21,7 +22,6 @@ services:
       - POSTGRES_PASSWORD=root
 
   ewm-service:
-    image: postgres:14-alpine
     build: ewm-service
     container_name: ewm-service
     ports:
@@ -30,6 +30,8 @@ services:
       - ewm-db
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/ewm-db
+      #- Stats_Server_URL=http://stats-server:9090
+      #- SERVER_PORT=8080
 
   ewm-db:
     image: postgres:14-alpine
