--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,22 @@ version: '3.1'
 services:
   stats-server:
     build: stats-server/statistics
+    image: stats-server
     container_name: stats-server
     ports:
       - "9090:9090"
     depends_on:
       - stats-db
     environment:
+      - APP_DB_HOST=stats-db
+      - APP_DB_PORT=5432
+      - APP_DB_NAME=stats-server
+      - APP_DB_USER=postgres
+      - APP_DB_PASSWORD=root
+      - SPRING_PROFILES_ACTIVE=default
+
       #- SERVER_PORT=9090
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats-db
+      #- SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats-db
 
   stats-db:
     image: postgres:14-alpine
@@ -29,7 +37,14 @@ services:
     depends_on:
       - ewm-db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/ewm-db
+      #- SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/ewm-db
+      - APP_DB_HOST=stats-db
+      - APP_DB_PORT=5432
+      - APP_DB_NAME=ewm-service
+      - APP_DB_USER=postgres
+      - APP_DB_PASSWORD=root
+      - SPRING_PROFILES_ACTIVE=default
+
       #- Stats_Server_URL=http://stats-server:9090
       #- SERVER_PORT=8080
 
