--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,23 @@
 version: '3.1'
 services:
   stats-server:
-    build: ./stats-server/statistics
+    build: ./stats-server/stat-server
     image: stats-server
+    tty: true
     container_name: stats-server
     ports:
       - "9090:9090"
+      - "9091:9091"
     depends_on:
       - stats-db
     environment:
-      - APP_DB_HOST=stats-db
-      - APP_DB_PORT=5432
-      - APP_DB_NAME=stats-server
-      - APP_DB_USER=postgres
-      - APP_DB_PASSWORD=root
+      #- SPRING_PROFILES_ACTIVE=test
+      - DB_HOST=stats-db
+      - DB_PORT=5432
+      - DB_NAME=stats-server
+      - DB_USER=postgres
+      - DB_PASSWORD=root
       - SPRING_PROFILES_ACTIVE=default
-
-      #- SERVER_PORT=9090
       #- SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats-db
 
   stats-db:
@@ -30,22 +31,23 @@ services:
       - POSTGRES_PASSWORD=root
 
   ewm-service:
-    build: ./ewm-service
+    build: ewm-service
+    image: ewm-service
+    tty: true
     container_name: ewm-service
     ports:
       - "8080:8080"
+      - "8081:8081"
     depends_on:
       - ewm-db
       - stats-server
     environment:
-      #- SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/ewm-db
-      - APP_DB_HOST=stats-db
-      - APP_DB_PORT=5432
-      - APP_DB_NAME=ewm-service
-      - APP_DB_USER=postgres
-      - APP_DB_PASSWORD=root
-      - SPRING_PROFILES_ACTIVE=default
-      - APP_Stats_Server_URL=http://stats-server:9090
+      - DB_HOST=ewm-db
+      - DB_PORT=5432
+      - DB_NAME=ewm-service
+      - DB_USER=postgres
+      - DB_PASSWORD=root
+      #- APP_Stats_Server_URL=http://stats-server:9090
       #- SERVER_PORT=8080
 
   ewm-db:
