--- a/stats-server/stat-server/pom.xml
+++ b/stats-server/stat-server/pom.xml
@@ -9,10 +9,8 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>statistics</artifactId>
+    <artifactId>stat-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-
-    <name>statistics</name>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
