--- a/stats-server/server/src/main/resources/application.properties
+++ b/stats-server/server/src/main/resources/application.properties
@@ -1,12 +1,9 @@
-spring.output.ansi.enabled=always
 server.error.include-message=always
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/stats-db
-spring.datasource.username=postgres
-spring.datasource.password=root
 spring.sql.init.mode=always
 
 server.port=9090
+
+spring.output.ansi.enabled=always
+logging.level.org.springframework.web.client.RestTemplate=DEBUG
