--- a/ewm-service/admin/pom.xml
+++ b/ewm-service/admin/pom.xml
@@ -5,18 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>ru.practicum</groupId>
-        <artifactId>explore-with-me</artifactId>
+        <artifactId>ewm-service</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>ewm-service</artifactId>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>admin</module>
-        <module>private</module>
-        <module>public</module>
-    </modules>
+    <groupId>ru.practicum.main</groupId>
+    <artifactId>admin</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -24,13 +18,18 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-jpamodelgen</artifactId>
+        </dependency>
+
+    </dependencies>
+
 
 </project>
