--- a/stats-server/server/pom.xml
+++ b/stats-server/server/pom.xml
@@ -27,6 +27,7 @@
             <groupId>ru.practicum.stats</groupId>
             <artifactId>dto</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
