--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -2,12 +2,10 @@ server.error.include-message=always
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/ewm-db
-spring.datasource.username=postgres
-spring.datasource.password=root
+
 server.port=8080
+
+stats-client=http://stats-server:9090
 
 spring.output.ansi.enabled=always
 logging.level.org.springframework.web.client.RestTemplate=DEBUG
