--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.sql.init.mode=always
 server.port=8080
 
 stats-client=http://stats-server:9090
+app-name="ewm-main"
 
 spring.output.ansi.enabled=always
 logging.level.org.springframework.web.client.RestTemplate=DEBUG
