--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.sql.init.mode=always
 
 server.port=8080
 
-stats-client=http://stats-server:9090
+#stats-client=http://stats-server:9090
+stats-client=http://localhost:9090
 
 app-name=ewm-main
 
