--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -14,3 +14,9 @@ spring.output.ansi.enabled=always
 logging.level.org.springframework.web.client.RestTemplate=DEBUG
 
 ru.practicum.main.server.jackson.date-format=yyyy-MM-dd HH:mm:ss
+
+
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/ewm-db
+spring.datasource.username=postgres
+spring.datasource.password=root
