--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -4,9 +4,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
 server.port=8080
-
-#stats-client=http://stats-server:9090
-stats-client=http://localhost:9090
+stats-client=http://stats-server:9090
+#stats-client=http://localhost:9090
 
 app-name=ewm-main
 
@@ -16,7 +15,7 @@ logging.level.org.springframework.web.client.RestTemplate=DEBUG
 ru.practicum.main.server.jackson.date-format=yyyy-MM-dd HH:mm:ss
 
 
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/ewm-db
-spring.datasource.username=postgres
-spring.datasource.password=root
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ewm-db
+#spring.datasource.username=postgres
+#spring.datasource.password=root
